<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/actions_screen_button_open_activity_1"
        android:text="@string/actions_screen_button_open_activity_1"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/actions_screen_button_open_url"
        android:text="@string/actions_screen_button_open_url"
        android:layout_below="@+id/actions_screen_button_open_activity_1"
        android:layout_alignStart="@+id/actions_screen_button_open_activity_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/actions_screen_button_open_dialer"
        android:text="@string/actions_screen_button_open_dialer"
        android:layout_below="@+id/actions_screen_button_open_url"
        android:layout_alignStart="@+id/actions_screen_button_open_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/actions_screen_edit_text_open_activity"
        android:text="@string/actions_screen_edit_text_open_activity_2"
        android:layout_below="@+id/actions_screen_button_open_dialer"
        android:layout_alignStart="@+id/actions_screen_button_open_dialer"
        android:layout_toRightOf="@+id/actions_screen_button_open_dialer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/actions_screen_button_open_activity_2"
        android:text="@string/actions_screen_button_open_activity_2"
        android:layout_below="@+id/actions_screen_edit_text_open_activity"
        android:layout_alignStart="@+id/actions_screen_edit_text_open_activity"
        android:layout_toRightOf="@+id/actions_screen_edit_text_open_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/actions_screen_button_make_call"
        android:text="@string/actions_screen_button_open_activity_2"
        android:layout_below="@+id/actions_screen_button_open_activity_2"
        android:layout_alignStart="@+id/actions_screen_button_open_activity_2"
        android:layout_toRightOf="@+id/actions_screen_button_open_activity_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>